--- a/angular.json
+++ b/angular.json
@@ -70,6 +70,14 @@
                   "with": "src/environments/environment.development.ts"
                 }
               ]
+            },
+            "qa":{
+              "fileReplacements": [
+                {
+                  "replace": "src/environment/environment.ts",
+                  "with": "src/environment/environment.qa.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -82,6 +90,9 @@
             },
             "development": {
               "browserTarget": "ecommerce-app:build:development"
+            },
+            "qa":{
+              "browserTarget": "ecommerce-app:build:qa"
             }
           },
           "defaultConfiguration": "development"
